--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     <h3>Contact</h3>
     <p>
       Feel free to reach out via <a href="mailto:elainalutz@example.com">email</a> or connect with me on 
-      <a href="https://github.com/elaina-lutz">GitHub</a> and <a href="https://www.linkedin.com/in/elaina-lutz-948114329" target="blank" rel="noopener">LinkedIn</a>.
+      <a href="https://github.com/elaina-lutz">GitHub</a> and <a href="https://www.linkedin.com/in/elaina-lutz-948114329" target="_blank" rel="noopener">LinkedIn</a>.
     </p>
   </section>
 
