--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
   <!-- Hero -->
   <div class="hero">
-  <img src="github - 1 of 1.jpg" alt="Photo of Elaina Lutz" class="hero-img">
+  <img src="github - 1 of 1.jpeg" alt="Photo of Elaina Lutz" class="hero-img">
   <div class="hero-text">
     <h2>Hi, I’m Ellie!</h2>
     <p>
