--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
   <section id="about">
     <h3>About Me</h3>
     <p>
-      I’m Elaina Lutz, an Honors Electrical and Computer Engineering student at Temple University with a focus on electrical. I’ve recently gained hands-on experience as a Strategic Electrical Engineering Intern at Constellation Energy’s Crane Clean Energy Center, where I supported plant restart efforts through breaker refurbishment, inverter verification, and reliability assessments. Active in organizations like SWE, IEEE, and Theta Tau, I’m passionate about applying creative problem-solving to complex energy challenges while staying curious and engaged in projects that blend technical skills with creativity.
+      I am currently an Honors Electrical and Computer Engineering student at Temple University with a focus on electrical. I’ve recently gained hands-on experience as a Strategic Electrical Engineering Intern at Constellation Energy’s Crane Clean Energy Center, where I supported plant restart efforts through breaker refurbishment, inverter verification, and reliability assessments. Active in organizations like SWE, IEEE, and Theta Tau, I’m passionate about applying creative problem-solving to complex energy challenges while staying curious and engaged in projects that blend technical skills with creativity.
     </p>
   </section>
 
