--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
       <a href="#about">About</a>
       <a href="#projects">Projects</a>
       <a href="#contact">Contact</a>
+      <a href="Elaina Lutz - Current Resume.pdf" target="_blank" rel="noopener">Resume</a>
     </nav>
   </header>
 
@@ -142,6 +143,8 @@
     <p>
       I am currently an Honors Electrical and Computer Engineering student at Temple University with a focus on electrical. I’ve recently gained hands-on experience as a Strategic Electrical Engineering Intern at Constellation Energy’s Crane Clean Energy Center, where I supported plant restart efforts through breaker refurbishment, inverter verification, and reliability assessments. Active in organizations like SWE, IEEE, and Theta Tau, I’m passionate about applying creative problem-solving to complex energy challenges while staying curious and engaged in projects that blend technical skills with creativity.
     </p>
+    You can view my full <a href="Elaina Lutz - Current Resume.pdf" target="_blank" rel="noopener">resume here</a>.
+  </p>
   </section>
 
   <!-- Projects -->
